--- a/templates/index.html
+++ b/templates/index.html
@@ -51,7 +51,7 @@
             <br>Best Of Luck🤞✌</h5>
           <div class="card-body bg-dark">
             <form class="form-control" style="margin:2px;padding: 2px;" method="POST" action="/result">
-            <input type="number" name="regno" placeholder="Registration No." required autofocus style="text-align: center;" class="form-control" autocomplete="off">
+            <input type="number" name="regno" placeholder="Registration No." required autofocus style="text-align: center;" class="form-control" >
           </div>
           <button type="Submit" class="btn btn-success btn-lg btn-block">Search</button>
         </div>
@@ -67,6 +67,10 @@
           <a href="https://github.com/ashish-devv"><img src="/static/github.svg"></a>
           &nbsp;&nbsp;
           <a href="https://www.linkedin.com/in/ashishkrshu/"><img src="/static/linkedin.svg"></a>
+          <!-- hitwebcounter Code START -->
+<a href="https://www.hitwebcounter.com" target="_blank">
+<img src="https://hitwebcounter.com/counter/counter.php?page=7544645&style=0036&nbdigits=7&type=page&initCount=50" title="Web Counter" Alt="counter free"   border="0" >
+</a>               
         </div>
       </div>
     </div>
