--- a/templates/result.html
+++ b/templates/result.html
@@ -46,6 +46,7 @@
           <li class="list-group-item list-group-item-success">{{n}}</li>
           {% endfor %}
         </ul>
+        
       </div>
       <div class="table-responsive-sm">
         <table class="table .table-hover table-dark ">
@@ -81,10 +82,24 @@
                   <a href="https://github.com/ashish-devv"><img src="/static/github.svg"></a>
                   &nbsp;&nbsp;
                   <a href="https://www.linkedin.com/in/ashishkrshu/"><img src="/static/linkedin.svg"></a>
+                  
                 </td>
               </tr>
             </tbody>
           </table>
+        </div>
+      <div class="bg-success">
+        <b>Site Visit Counter 🏆✔😎:-</b>
+        <center>
+        <!-- hitwebcounter Code START -->
+        <a href="https://www.hitwebcounter.com" target="_blank">
+        <img src="https://hitwebcounter.com/counter/counter.php?page=7544645&style=0036&nbdigits=7&type=page&initCount=50" title="Web Counter" aalt="counter free"   border="0" >
+        </a>      
+          </center>
+      </div>
+      <div class="alert alert-danger" role="alert">
+          <b>If you find the Result Buggy 😢 ! Please Check Your Result In The Mail to Confirm !✔👌📧</b><hr>
+          Your CGPA May be different This is may vary!
         </div>
 
       
