--- a/templates/index.html
+++ b/templates/index.html
@@ -3,74 +3,105 @@
   <head>
     <link rel="shortcut icon" type="image/png" href="/static/f.png">
     <!-- Required meta tags -->
+    <meta name="title" content="Cutm Result ">
+    <meta name="description" content="CUTM Website To See Current Result Of the Semester. Made By Ashish">
+    <meta name="keywords" content="Result, CUTM, Centurion University, Odisha, result">
+    <meta name="robots" content="index, follow">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta name="language" content="English">
+    <meta name="author" content="Ashish">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,500;0,700;1,800&display=swap"
+      rel="stylesheet">
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"
+        integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w=="
+        crossorigin="anonymous" />
 
     <title>Result-Ashish</title>
     <style type="text/css">
       *{
         margin: 0;
         padding: 0;
+        font-family: 'Poppins';
       }
-      .bigbox
-      {
-        background: linear-gradient(-45deg, #ee7752, #e73c7e,#ff4b1f, #ff9068, #16bffd, #cb3066,#43e97b,#84fab0,#330867,#fed6e3);
-    background-size: 400% 400%;
-    animation: gradient 4s ease infinite;
-      }
-      body{
-        background: linear-gradient(-45deg, #ee7752, #e73c7e,#ff4b1f, #ff9068, #16bffd, #cb3066,#4ca1af, #c4e0e5);
-    background-size: 400% 400%;
-    animation: gradient 6s ease infinite;
-        
-      }
-      @keyframes gradient {
-    0% {
-        background-position: 0% 50%;
-    }
-    50% {
-        background-position: 100% 50%;
-    }
-    100% {
-        background-position: 0% 50%;
-    }
+      body {
+    background: linear-gradient(270deg, #fbaf00, #ffd639, #ffa3af, #007cbe, #00af54);
+    background-size: 1000% 1000%;
+
+    -webkit-animation: lineargrad 30s ease infinite;
+    -moz-animation: lineargrad 30s ease infinite;
+    animation: lineargrad 30s ease infinite;
+}
+.jumbotron , .card{
+   background-color: rgba(255, 255, 255, .15);  
+ backdrop-filter: blur(5px);
+}
+
+@-webkit-keyframes lineargrad {
+    0%{background-position:0% 51%}
+    50%{background-position:100% 50%}
+    100%{background-position:0% 51%}
+}
+@-moz-keyframes lineargrad {
+    0%{background-position:0% 51%}
+    50%{background-position:100% 50%}
+    100%{background-position:0% 51%}
+}
+@keyframes lineargrad {
+    0%{background-position:0% 51%}
+    50%{background-position:100% 50%}
+    100%{background-position:0% 51%}
 }
     </style>
   </head>
   <body>
-    <div class="container text-center">
-      <div class="jumbotron bg-dark bigbox">
-        <h1 class="display-4"><img src="/static/i.png" style="border-radius:50%;border:5px black solid;width:200px;height: 200px;"></h1>
-      </div>
-      <div class="card text-center bg-dark text-white">
-        <div class="card-body bg-dark">
-          <h5 class="card-title">Enter your Registration no. 👇 
-            <br>Best Of Luck🤞✌</h5>
-          <div class="card-body bg-dark">
-            <form class="form-control" style="margin:2px;padding: 2px;" method="POST" action="/result">
-            <input type="number" name="regno" placeholder="Registration No." required autofocus style="text-align: center;" class="form-control" >
-          </div>
-          <button type="Submit" class="btn btn-success btn-lg btn-block">Search</button>
+    <div class="container">
+      <div class="row mt-4">
+        <div class="col-sm-6">
+          <img src="/static/pixeltrue-seo-1.svg" alt="" class="img-fluid">
         </div>
-        </form>
-        <div class="card-footer text-muted text-white">
-          Made With ❤ By <a href="#">Ashish</a><br>
-          To Follow Me Click Here 👉:
-          &nbsp;&nbsp;
-          <a href="https://www.instagram.com/ashish.exe/"><img src="/static/instagram.svg"></a>
-          &nbsp;&nbsp;
-          <a href="https://www.facebook.com/ashishkrfab"><img src="/static/facebook.svg"></a>
-          &nbsp;&nbsp;
-          <a href="https://github.com/ashish-devv"><img src="/static/github.svg"></a>
-          &nbsp;&nbsp;
-          <a href="https://www.linkedin.com/in/ashishkrshu/"><img src="/static/linkedin.svg"></a>
-          <!-- hitwebcounter Code START -->
-<a href="https://www.hitwebcounter.com" target="_blank">
-<img src="https://hitwebcounter.com/counter/counter.php?page=7544645&style=0036&nbdigits=7&type=page&initCount=50" title="Web Counter" Alt="counter free"   border="0" >
-</a>               
+        <div class="col-sm-6">
+          <div class="jumbotron text-center border border-dark">
+            <img src="/static/i.png" alt="" style="border-radius:50%;border:5px black solid;width:100px;height: 100px;">
+            <h1 class="display-4">Result 📃</h1>
+          </div>
+          <div class="card text-center border border-dark">
+            <div class="card-body">
+              <h5 class="card-title">Registration No Here 👇</h5>
+              <form action="/result" method="POST">
+              <p class="card-text">
+                <input type="number" name="regno" id="" class="form-control text-center border border-dark" placeholder="Enter Your Registration no Here.✔">
+              </p>
+              <button class="btn btn-primary" type="submit">See Your Result</button>
+              </form>
+            </div>
+          </div>
+          
+        </div>
+      </div>
+      <div class="card mt-2 border border-dark text-center bg-dark text-white">
+        <div class="card-body">
+          <p>
+            <a href="https://github.com/ashish-devv"><i class="fab fa-github fa-2x"></i></a>
+            <a href="https://www.linkedin.com/in/ashishkrshu/"><i class="fab fa-linkedin fa-2x"></i></a>
+            <a href="https://www.facebook.com/ashishkrfab/"><i class="fab fa-facebook fa-2x"></i></a>
+            <a href="https://www.instagram.com/ashish.exe/"><i class="fab fa-instagram fa-2x"></i></a>
+          </p>
+          <p>
+            Made With 💖 By <a href="https://github.com/ashish-devv">Ashish</a>  
+          </p>
+          <p>
+            <b>Site Visit Counter 🏆✔😎:-</b>
+            <a href="https://www.hitwebcounter.com" target="_blank">
+              <img src="https://hitwebcounter.com/counter/counter.php?page=7544645&style=0036&nbdigits=7&type=page&initCount=50"
+                title="Web Counter" aalt="counter free" border="0">
+            </a>
+          </p>
         </div>
       </div>
     </div>
