--- a/templates/result.html
+++ b/templates/result.html
@@ -1,114 +1,167 @@
 <!doctype html>
 <html lang="en">
-  <head>
+
+<head>
     <link rel="shortcut icon" type="image/png" href="/static/f.png">
     <!-- Required meta tags -->
+    <meta name="title" content="Cutm Result ">
+    <meta name="description" content="CUTM Website To See Current Result Of the Semester. Made By Ashish">
+    <meta name="keywords" content="Result, CUTM, Centurion University, Odisha, result">
+    <meta name="robots" content="index, follow">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta name="language" content="English">
+    <meta name="author" content="Ashish">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/css2?family=Baloo+Bhaina+2&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,500;0,700;1,800&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"
+        integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w=="
+        crossorigin="anonymous" />
     <title>Result!</title>
     <style>
-      body{
-        background: linear-gradient(-45deg, #ee7752, #e73c7e,#ff4b1f, #ff9068, #16bffd, #cb3066,#4ca1af, #c4e0e5);
-    background-size: 400% 400%;
-    animation: gradient 6s ease infinite;
-    font-family: 'Baloo Bhaina 2', cursive;
-        
-      }
-      .bigbox{
-        background: linear-gradient(-45deg, #ee7752, #e73c7e,#ff4b1f, #ff9068, #16bffd, #cb3066,#4ca1af, #c4e0e5);
-    background-size: 400% 400%;
-    animation: gradient 6s ease infinite;
-      }
-      @keyframes gradient {
-    0% {
-        background-position: 0% 50%;
-    }
-    50% {
-        background-position: 100% 50%;
-    }
-    100% {
-        background-position: 0% 50%;
-    }
-}
-    </style>
-  </head>
-  <body>
-    <div class="container">
-      <div class="jumbotron bigbox">
-        <h1 class="display-4 text-center ">Result! 📄</h1>
-        <hr>
-        <ul class="list-group list-group-horizontal-md ">
-          {% for n in inf %}
-          <li class="list-group-item list-group-item-success">{{n}}</li>
-          {% endfor %}
-        </ul>
-        
-      </div>
-      <div class="table-responsive-sm">
-        <table class="table .table-hover table-dark ">
-            <thead>
-              <tr>
-                <th scope="col">SUB.CODE</th>
-                <th scope="col">SUBJECT NAME</th>
-                <th scope="col">Grade</th>
-              </tr>
-            </thead>
-            <tbody>
-              
-              {% for user in res %}
-              <tr>
-                <td>{{user[0]}}</td>
-                <td>{{user[1]}}</td>
-                <td>{{user[2]}}</td>
-              </tr>
-              {% endfor %}
-              <tr class="bg-success">
-                <td colspan=3 style="text-align: center;"><span style="color:red;"><b>CGPA: </b></span>{{cgpa}}</td>
-              </tr>
-              <tr class="bg-primary">
-                <td colspan=3 style="text-align: center;">
-                  Made With ❤ By <a hred="#">Ashish</a> 
-                  <br>
-                  To Follow Me Click Here 👉:
-                  &nbsp;&nbsp;
-                  <a href="https://www.instagram.com/ashish.exe/"><img src="/static/instagram.svg"></a>
-                  &nbsp;&nbsp;
-                  <a href="https://www.facebook.com/ashishkrfab"><img src="/static/facebook.svg"></a>
-                  &nbsp;&nbsp;
-                  <a href="https://github.com/ashish-devv"><img src="/static/github.svg"></a>
-                  &nbsp;&nbsp;
-                  <a href="https://www.linkedin.com/in/ashishkrshu/"><img src="/static/linkedin.svg"></a>
-                  
-                </td>
-              </tr>
-            </tbody>
-          </table>
-        </div>
-      <div class="bg-success">
-        <b>Site Visit Counter 🏆✔😎:-</b>
-        <center>
-        <!-- hitwebcounter Code START -->
-        <a href="https://www.hitwebcounter.com" target="_blank">
-        <img src="https://hitwebcounter.com/counter/counter.php?page=7544645&style=0036&nbdigits=7&type=page&initCount=50" title="Web Counter" aalt="counter free"   border="0" >
-        </a>      
-          </center>
-      </div>
-      <div class="alert alert-danger" role="alert">
-          <b>If you find the Result Buggy 😢 ! Please Check Your Result In The Mail to Confirm !✔👌📧</b><hr>
-          Your CGPA May be different This is may vary!
-        </div>
+        body {
+            background: linear-gradient(270deg, #fbaf00, #ffd639, #ffa3af, #007cbe, #00af54);
+            background-size: 1000% 1000%;
 
-      
+            -webkit-animation: lineargrad 30s ease infinite;
+            -moz-animation: lineargrad 30s ease infinite;
+            animation: lineargrad 30s ease infinite;
+        }
+
+        .jumbotron , .tbl {
+            background-color: rgba(255, 255, 255, .15);  
+ backdrop-filter: blur(5px);
+        }
+
+        @-webkit-keyframes lineargrad {
+            0% {
+                background-position: 0% 51%
+            }
+
+            50% {
+                background-position: 100% 50%
+            }
+
+            100% {
+                background-position: 0% 51%
+            }
+        }
+
+        @-moz-keyframes lineargrad {
+            0% {
+                background-position: 0% 51%
+            }
+
+            50% {
+                background-position: 100% 50%
+            }
+
+            100% {
+                background-position: 0% 51%
+            }
+        }
+
+        @keyframes lineargrad {
+            0% {
+                background-position: 0% 51%
+            }
+
+            50% {
+                background-position: 100% 50%
+            }
+
+            100% {
+                background-position: 0% 51%
+            }
+        }
+    </style>
+</head>
+
+<body>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-sm-4">
+                <img src="/static/pixeltrue-seo-1.svg" alt="" class="img-fluid">
+                <div class="jumbotron  border border-dark">
+                    <h1 class="display-4 text-center ">Result! 📄</h1>
+                    <hr>
+                    <ul class="list-group list-group-horizontal-md ">
+                        {% for n in inf %}
+                        <li class="list-group-item list-group-item-success">{{n}}</li>
+                        {% endfor %}
+                    </ul>
+                
+                </div>  
+            </div>
+            <div class="col-sm-8 mt-4">
+                <div class="table-responsive-sm  tbl ">
+                    <table class="table table-hover  table-striped border border-dark table-bordered">
+                        <thead class="thead-dark">
+                            <tr>
+                                <th scope="col">SUB.CODE</th>
+                                <th scope="col">SUBJECT NAME</th>
+                                <th scope="col">Grade</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                
+                            {% for user in res %}
+                            <tr>
+                                <td>{{user[0]}}</td>
+                                <td class="text-center" style="font-weight: bold;">{{user[1]}}</td>
+                                <td style="font-weight: bold;" class="text-center">{{user[2]}}</td>
+                            </tr>
+                            {% endfor %}
+                            <tr class="bg-dark text-center text-white">
+                                <td colspan=3 style="text-align: center;"><span style="color:red;"><b>CGPA: </b></span>{{cgpa}}</td>
+                            </tr>
+                            
+                        </tbody>
+                    </table>
+                </div>
+                <div class="card mt-2 border border-dark text-center bg-dark text-white">
+                    <div class="card-body">
+                        <p>
+                            <a href="https://github.com/ashish-devv"><i class="fab fa-github fa-2x"></i></a>
+                            <a href="https://www.linkedin.com/in/ashishkrshu/"><i class="fab fa-linkedin fa-2x"></i></a>
+                            <a href="https://www.facebook.com/ashishkrfab/"><i class="fab fa-facebook fa-2x"></i></a>
+                            <a href="https://www.instagram.com/ashish.exe/"><i class="fab fa-instagram fa-2x"></i></a>
+                        </p>
+                        <p>
+                            Made With 💖 By <a href="https://github.com/ashish-devv">Ashish</a>
+                        </p>
+                        <p>
+                            <b>Site Visit Counter 🏆✔😎:-</b>
+                            <a href="https://www.hitwebcounter.com" target="_blank">
+                                <img src="https://hitwebcounter.com/counter/counter.php?page=7544645&style=0036&nbdigits=7&type=page&initCount=50"
+                                    title="Web Counter" aalt="counter free" border="0">
+                            </a>
+                        </p>
+                    </div>
+                </div>
+
+            </div>
+        </div>
     </div>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-  </body>
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+        integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+        integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+        crossorigin="anonymous"></script>
+</body>
+
 </html>
