Link Added For Telegram bot

--- a/templates/index.html
+++ b/templates/index.html
@@ -146,6 +146,65 @@
           </div>
         </div>
       </div>
+      <div class="card text-center mt-2">
+        <div class="card-body">
+          <p class="card-text">
+            <!-- telegram icon -->
+
+            <span class="border border-dark badge badge-danger"
+              >New <i class="fab fa-telegram-plane fa-2x"></i
+            ></span>
+
+            CUTM Result Bot Also available on
+            <button
+              class="btn btn-primary"
+              data-toggle="modal"
+              data-target="#exampleModal"
+            >
+              Telegram <small class="">Click Here</small>
+            </button>
+            <br />
+            You Can See Your Result On Telegram bot by sending your Registration
+            no in the chat.
+          </p>
+        </div>
+      </div>
+      <div
+        class="modal fade"
+        id="exampleModal"
+        tabindex="-1"
+        role="dialog"
+        aria-labelledby="exampleModalLabel"
+        aria-hidden="true"
+      >
+        <div class="modal-dialog" role="document">
+          <div class="modal-content">
+            <div class="modal-body">
+              <b> You Can Also Search For "cutmresultbot" on Telegram </b>
+              <br />
+              <img
+                src="/static/qrcodeforbot.jpeg"
+                alt="qr code"
+                class="img-fluid"
+                width="300"
+                height="300"
+              />
+            </div>
+            <div class="modal-footer">
+              <a
+                href="https://t.me/cutmresultbot"
+                class="btn btn-success"
+                target="_blank"
+                rel="noopener noreferrer"
+                >Link 🔗</a
+              >
+              <button type="button" class="btn btn-danger" data-dismiss="modal">
+                Close
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
       <div class="card mt-2 border border-dark text-center bg-dark text-white">
         <div class="card-body">
           <p>
